added example solutions

--- a/src/main/java/ch/fhnw/cuie/module03/horizon/style.css
+++ b/src/main/java/ch/fhnw/cuie/module03/horizon/style.css
@@ -1,6 +1,6 @@
 Horizon {
     -fx-padding: 5;
-    -fx-background-color: azure;
+    -fx-background-color: #ffd8de;
 }
 
 .seperator {
@@ -8,7 +8,7 @@ Horizon {
 }
 
 .title {
-
+    -fx-font-family: "Lato-Regular, Lato";
 }
  .value {
 
