added font reference

--- a/src/main/java/ch/fhnw/cuie/module03/horizon/fonts.css
+++ b/src/main/java/ch/fhnw/cuie/module03/horizon/fonts.css
@@ -28,4 +28,14 @@
     src: url(/fonts/ds_digital/DS-DIGI.TTF);
 }
 
+@font-face {
+    font-family: 'Lato-Regular';
+    src: url(/fonts/Lato/Lato-Reg.ttf);
+}
+
+@font-face {
+    font-family: 'Lato-Light';
+    src: url(/fonts/Lato/Lato-Lig.ttf);
+}
+
 
