--- a/src/main/java/ch/fhnw/cuie/module03/horizon/style.css
+++ b/src/main/java/ch/fhnw/cuie/module03/horizon/style.css
@@ -16,9 +16,8 @@ Horizon {
     -fx-font-weight: normal;
 }
  .valueInput {
-     -fx-border-width: 0px;
      -fx-font-family: "Lato-Light, Lato";
-     -fx-font-size: 48;
+     -fx-font-size: 48px;
      -fx-font-weight: 300;
 
  }
