changes in textfield

--- a/src/main/java/ch/fhnw/cuie/module03/horizon/fonts.css
+++ b/src/main/java/ch/fhnw/cuie/module03/horizon/fonts.css
@@ -29,12 +29,12 @@
 }
 
 @font-face {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato Regular';
     src: url(/fonts/Lato/Lato-Reg.ttf);
 }
 
 @font-face {
-    font-family: 'Lato-Light';
+    font-family: 'Lato Light';
     src: url(/fonts/Lato/Lato-Lig.ttf);
 }
 
