added style attribute

--- a/src/main/java/ch/fhnw/cuie/module04/buildings/singlebuilding/fonts.css
+++ b/src/main/java/ch/fhnw/cuie/module04/buildings/singlebuilding/fonts.css
@@ -28,4 +28,9 @@
     src: url(/fonts/ds_digital/DS-DIGI.TTF);
 }
 
+@font-face {
+    font-family: 'Arvo Regular';
+    src: url(/fonts/Arvo/Arvo-Regular.ttf);
+}
+
 
