--- a/src/main/java/ch/fhnw/cuie/templates/simplecontroltemplate/fonts.css
+++ b/src/main/java/ch/fhnw/cuie/templates/simplecontroltemplate/fonts.css
@@ -1,4 +1,9 @@
 @font-face {
+    font-family: 'Futura';
+    src: url(/fonts/Futura/Futura.ttc);
+}
+
+@font-face {
     font-family: 'FontAwesome';
     src: url("/fonts/fontawesome-webfont.ttf");
 }
