--- a/src/main/java/ch/fhnw/cuie/module09/timecontrolmanufactory/style.css
+++ b/src/main/java/ch/fhnw/cuie/module09/timecontrolmanufactory/style.css
@@ -5,8 +5,11 @@
 
 .myTimeControl .timeField{
     -fx-background-color: yellow;
+    -fx-font-size: 100px;
 }
 
 .myTimeControl:mandatory .timeField{
-    -fx-background-color: green;
+    -fx-font-color: red;
+    -fx-background-color: white;
+
 }
