added background color to timeLabel

--- a/src/main/java/ch/fhnw/cuie/module09/timecontrolmanufactory/style.css
+++ b/src/main/java/ch/fhnw/cuie/module09/timecontrolmanufactory/style.css
@@ -11,5 +11,8 @@
 .myTimeControl:mandatory .timeField{
     -fx-font-color: red;
     -fx-background-color: white;
+}
 
+.myTimeControl .timeLabel{
+    -fx-background-color: pink;
 }
