added interactive field for title

--- a/src/main/java/ch/fhnw/cuie/myProjects/pot/style.css
+++ b/src/main/java/ch/fhnw/cuie/myProjects/pot/style.css
@@ -16,7 +16,11 @@
 
 .potHeightControl .titleLabel{
     -fx-font-size: 31px;
-    -fx-padding: 150px;
+    -fx-padding: 15px;
+    -fx-alignment: center;
+    -fx-focus-traversable: true;
+    -fx-text-box-border: none;
+    -fx-outer-border: none;
 }
 
 .potHeightControl .heightCircleBig {
