added dynamic name for small labels

--- a/src/main/java/ch/fhnw/cuie/myProjects/pot/style.css
+++ b/src/main/java/ch/fhnw/cuie/myProjects/pot/style.css
@@ -55,3 +55,8 @@
 .potHeightControl .heightLabelBox {
     -fx-padding: 5px;
 }
+
+.potHeightControl .smallLabel {
+    -fx-font-family: 'Lato Bold';
+    -fx-font-size: 12px;
+}
